@@ -199,7 +199,7 @@ For functions:		template<class T> _IRR_DEPRECATED_ void test4(void) {}
 /** Usage in a derived class:
 virtual void somefunc() _IRR_OVERRIDE_;
 */
-#if (__GNUC__ >= 4 && __GNUC_MINOR__ >= 7)
+#if (__GNUC__ >= 4 && __GNUC_MINOR__ >= 7 && (defined(__GXX_EXPERIMENTAL_CXX0X) || __cplusplus >= 201103L) )
 #define _IRR_OVERRIDE_ override
 #elif (_MSC_VER >= 1600 ) /* supported since MSVC 2010 */
 #define _IRR_OVERRIDE_ override
